tests/NormalTests/paczka2/big_fuzzy/53990719.err
Error in line 11: A781 A781 16,8
Error in line 22: 83R37qfeY S635 37,24
Error in line 27: QhWyUNNa S635 85,8
Error in line 32: A781 A781 128,1
Error in line 33: A781 S858 77,9
Error in line 39: 83R37qfeY S635 -3,8
Error in line 43: ?Aç81
Error in line 45: gOV S858 31,7
Error in line 50: JH4io1 A267 45,2
Error in line 64: JH4io1 S635 71,6
Error in line 70: 7eRgZLy A781 4,\
Error in line 62: gOV S635 83,2
Error in line 73: QhWyUNNa A267 27,1
Error in line 87: WGAyPxM7wo A781 77,3
Error in line 66: 7eRgZLy A781 11,5
Error in line 101: JH4io1 A267 121,4
Error in line 106: JH4io1 S635 68,9
Error in line 97: A781 S858 23,8
Error in line 120: 83R37qfeY A267 80,4
Error in line 125: 7eRgZLy S858 40,0
Error in line 130: WGAyPxM7wo S635 1,1
Error in line 134: WGAyPxM7wo A781 84,6
Error in line 139: 7eRgZLy S858 70v9
Error in line 129: 83R37qfeY S635 90,3
Error in line 140: 83R37qfeY A267 65,2
Error in line 142: 7eRgZLy S858 122,7
Error in line 151: JH4io1 A781 12,2
Error in line 171: QhWyUNNa A781 40,50
Error in line 186: gOV A267 63,8
Error in line 166: QhWyUNNa A781 9,8
Error in line 189: QhWyUNNa S858 21,3
Error in line 190: WGAyPxM7wo A781 49,0
Error in line 200: A781 A781 37,7
Error in line 220: 83R37qfeY S858 47,3
Error in line 209: JH4io1 S858 48,4
Error in line 223: A781 S858 18,1
Error in line 225: A781 S635 35,0
Error in line 222: 83R37qfeY A267 86,7
Error in line 234: 7eRgZLy A267 18,1
Error in line 219: QhWyUNNa A781 72,7
